force-app/main/default/objects/Opportunity/fields/Tipo_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Cliente__c</fullName>
    <label>Tipo Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GG</fullName>
                <default>true</default>
                <label>GG</label>
            </value>
            <value>
                <fullName>PMG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>