force-app/main/default/objects/Opportunity/fields/Tipo_energ_a_despu_s_de_p_rdida__c.field-meta.xml
<CustomField>
    <fullName>Tipo_energ_a_despu_s_de_p_rdida__c</fullName>
    <label>Tipo energía después de pérdida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Biomasa</fullName>
            </value>
            <value>
                <fullName>Botellas propano</fullName>
            </value>
            <value>
                <fullName>Butano</fullName>
            </value>
            <value>
                <fullName>Carbón</fullName>
            </value>
            <value>
                <fullName>Electricidad</fullName>
            </value>
            <value>
                <fullName>Fuel</fullName>
            </value>
            <value>
                <fullName>Gas Natural</fullName>
            </value>
            <value>
                <fullName>Gasoleo</fullName>
            </value>
            <value>
                <fullName>Geotermia</fullName>
            </value>
            <value>
                <fullName>LNG</fullName>
            </value>
            <value>
                <fullName>Madera</fullName>
            </value>
            <value>
                <fullName>Nuevo</fullName>
            </value>
            <value>
                <fullName>Otra</fullName>
            </value>
            <value>
                <fullName>Propano</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>