force-app/main/default/objects/Opportunity/fields/Tipo_Tarifa__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Tarifa__c</fullName>
    <label>Tipo Tarifa</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Polinómica</fullName>
                <default>true</default>
                <label>Polinómica</label>
            </value>
            <value>
                <fullName>SPOT</fullName>
            </value>
            <value>
                <fullName>Profesional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>