force-app/main/default/objects/Opportunity/fields/Tipo_venta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_venta__c</fullName>
    <label>Tipo venta</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Grupo precio cliente</fullName>
                <default>true</default>
                <label>Grupo precio cliente</label>
            </value>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Todos los clientes</fullName>
            </value>
            <value>
                <fullName>Campaña</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>