force-app/main/default/objects/Opportunity/fields/Toneladas__c.field-meta.xml
<CustomField>
    <fullName>Toneladas__c</fullName>
    <label>Toneladas</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>