force-app/main/default/objects/Opportunity/fields/Uso__c.field-meta.xml
<CustomField>
    <fullName>Uso__c</fullName>
    <label>Uso</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agua caliente sanitaria</fullName>
            </value>
            <value>
                <fullName>Autogas</fullName>
            </value>
            <value>
                <fullName>Calefacción</fullName>
            </value>
            <value>
                <fullName>Cocina</fullName>
            </value>
            <value>
                <fullName>Generación electricidad</fullName>
            </value>
            <value>
                <fullName>Procesos Industriales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>