force-app/main/default/objects/Opportunity/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <formula>IF(ISBLANK(TEXT(County__c)), &quot;&quot;,
IF(CONTAINS(&quot;Albacete:Avila:Ciudad Real:Cuenca:Guadalajara:Madrid:Palencia:Salamanca:Segovia:Soria:Toledo:Valladolid:Zamora&quot;, TEXT(County__c)), &quot;Centro&quot;,
IF(CONTAINS(&quot;Barcelona:Castellón:Girona/Gerona:Huesca:Lleida/Lérida:Tarragona:Teruel:Valencia:Zaragoza&quot;, TEXT(County__c)), &quot;Este&quot;,
IF(CONTAINS(&quot;Alava/Araba:Bizkaia/Vizcaya:Burgos:Cantabria:Gipuzkoa/Guipuzcoa:La Rioja:Navarra&quot;, TEXT(County__c)), &quot;Norte&quot;,
IF(CONTAINS(&quot;A Coruña/La Coruña:Asturias:León:Lugo:Orense/Ourense:Pontevedra&quot;,
TEXT(County__c)), &quot;Oeste&quot;,
IF(CONTAINS(&quot;Alicante:Almeria:Badajoz:Cáceres:Cádiz:Cordoba:Granada:Huelva:Jaen:Málaga:Murcia:Sevilla&quot;, TEXT(County__c)), &quot;Sud&quot;,
&quot;&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Zona</label>
    <type>Text</type>
</CustomField>