force-app/main/default/objects/Opportunity/recordTypes/Ampliacion.recordType-meta.xml
<RecordType>
    <fullName>Ampliacion</fullName>
    <active>false</active>
    <businessProcess>Ampliación</businessProcess>
    <description>Venta de un servicio sobre un contrato vigente</description>
    <label>Ampliación</label>
</RecordType>