force-app/main/default/objects/Opportunity/recordTypes/GNL.recordType-meta.xml
<RecordType>
    <fullName>GNL</fullName>
    <active>false</active>
    <businessProcess>GNL</businessProcess>
    <description>GNL</description>
    <label>GNL</label>
</RecordType>