force-app/main/default/objects/Opportunity/recordTypes/Spot.recordType-meta.xml
<RecordType>
    <fullName>Spot</fullName>
    <active>false</active>
    <businessProcess>Venta Nueva</businessProcess>
    <description>Oportunidad de venta Spot</description>
    <label>Spot</label>
</RecordType>