force-app/main/default/objects/Opportunity/recordTypes/Venta_Nueva.recordType-meta.xml
<RecordType>
    <fullName>Venta_Nueva</fullName>
    <active>true</active>
    <businessProcess>Venta Nueva</businessProcess>
    <label>Nueva</label>
</RecordType>