force-app/main/default/objects/Opportunity/validationRules/Asignar_estado_Identificada.validationRule-meta.xml
<ValidationRule>
    <fullName>Asignar_estado_Identificada</fullName>
    <active>false</active>
    <description>Cuando se crea una oportunidad se debe asignar el estado &quot;Identificada&quot;. Por tanto, el campo StageName deberá tener como valor por defecto “Identificada” y en caso de que el usuario seleccione otro valor se le mostrará el mensaje de error.</description>
    <errorConditionFormula>AND(
ISNEW(),
NOT(ISPICKVAL(StageName, &apos;Identificada&apos;))
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Cuando se crea una oportunidad el campo “Etapa” debe ser “Identificada”.</errorMessage>
</ValidationRule>