force-app/main/default/objects/Opportunity/validationRules/Cambio_estado_aplazada.validationRule-meta.xml
<ValidationRule>
    <fullName>Cambio_estado_aplazada</fullName>
    <active>true</active>
    <description>Solo puede cambiar el estado de la oportunidad a &quot;Aplazada / Ahora No&quot; el propietario o el administrador.</description>
    <errorConditionFormula>AND( 
ISCHANGED(StageName), 
ISPICKVAL(StageName, &apos;Aplazada/Ahora No&apos;),
NOT(OR($User.Id = Owner.Id,  $Profile.Name  = &apos;Administrador del sistema&apos;))
)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Solo puede cambiar el estado de la oportunidad a &quot;Aplazada / Ahora No&quot; el propietario o el administrador.</errorMessage>
</ValidationRule>