force-app/main/default/objects/Opportunity/validationRules/Evitar_cambio_canal_de_ventas.validationRule-meta.xml
<ValidationRule>
    <fullName>Evitar_cambio_canal_de_ventas</fullName>
    <active>true</active>
    <description>Regla de validación para que los canales de ventas con origen Primagas (online y telefono) no puedan modificarse</description>
    <errorConditionFormula>IF(
OR(
ISPICKVAL(PRIORVALUE(LeadSource),&quot;Llamada entrante&quot;),
ISPICKVAL(PRIORVALUE(LeadSource),&quot;Online Primagas&quot;)
) &amp;&amp; NOT(ISNULL( CreatedDate )  )    
, (if(ISCHANGED(LeadSource),true,false)), false)</errorConditionFormula>
    <errorMessage>No se puede modificar el canal de ventas</errorMessage>
</ValidationRule>