force-app/main/default/objects/Opportunity/validationRules/Fecha_fin_contrato_obligatoria.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_fin_contrato_obligatoria</fullName>
    <active>true</active>
    <description>Si la oportunidad tiene un contrato en vigor con un competidor debe llenarse la &quot;Fecha fin contrato actual&quot;</description>
    <errorConditionFormula>AND(
OR(ISNEW(), ISCHANGED(Motivos_de_P_rdida__c)),
ISBLANK(TEXT(Fecha_fin_contrato_actual__c )),
ISPICKVAL(Motivos_de_P_rdida__c, &quot;Compromiso permanencia competencia&quot;)
)</errorConditionFormula>
    <errorDisplayField>Fecha_fin_contrato_actual__c</errorDisplayField>
    <errorMessage>Si la oportunidad tiene un contrato en vigor con un competidor debe llenarse la &quot;Fecha fin contrato actual&quot;</errorMessage>
</ValidationRule>