force-app/main/default/objects/Opportunity/validationRules/Motivo_perdida_obligatorio.validationRule-meta.xml
<ValidationRule>
    <fullName>Motivo_perdida_obligatorio</fullName>
    <active>true</active>
    <description>El campo “Motivos de pérdida” es obligatorio para modificar el estado de la oportunidad a &quot;Cerrada perdida&quot; o &quot;Aplazada/Ahora No&quot;.</description>
    <errorConditionFormula>AND( 
ISCHANGED(StageName), 
ISBLANK(TEXT(Motivos_de_P_rdida__c)),
OR(ISPICKVAL(StageName, &apos;Cerrada perdida&apos;),
ISPICKVAL(StageName, &apos;Aplazada/Ahora No&apos;))
)</errorConditionFormula>
    <errorDisplayField>Motivos_de_P_rdida__c</errorDisplayField>
    <errorMessage>El campo “Motivos de pérdida” es obligatorio para modificar el estado de la oportunidad al valor “Cerrada perdida” o &quot;Aplazada/Ahora No&quot;.</errorMessage>
</ValidationRule>