force-app/main/default/objects/Opportunity/listViews/ClosingNextMonth.listView-meta.xml
<ListView>
    <fullName>ClosingNextMonth</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>NEXT_MONTH</value>
    </filters>
    <label>Las que cierran el próximo mes</label>
    <language>es</language>
</ListView>