force-app/main/default/objects/Opportunity/listViews/ClosingThisMonth.listView-meta.xml
<ListView>
    <fullName>ClosingThisMonth</fullName>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSE_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Las que cierran este mes</label>
    <language>es</language>
</ListView>