force-app/main/default/objects/Opportunity/listViews/Oportunidades_sin_Cuenta.listView-meta.xml
<ListView>
    <fullName>Oportunidades_sin_Cuenta</fullName>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
    </filters>
    <label>Oportunidades sin Cuenta</label>
</ListView>